<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#00f"
        android:layout_marginTop="30dp"
        android:gravity="center"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strEmployee"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:padding="10dp"
            android:id="@+id/btnEmployee"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/strEmployer"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:id="@+id/btnEmployer"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBusiness"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:padding="10dp"
            android:id="@+id/btnBusiness"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/strOrganization"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:id="@+id/btnOrganization"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_desc"
        android:textSize="20sp"
        android:textColor="#D51F1F"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>